--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 
   <!-- Image gallery -->
   <div class="gallery">
-    <img src="C:\Users\dylan\Desktop\webbsite\images\image 1.jpg" alt="Photo 1">
-    <img src="C:\Users\dylan\Desktop\webbsite\images\image 2.jpg" alt="Photo 2">
-    <img src="C:\Users\dylan\Desktop\webbsite\images\image 3.jpg" alt="Photo 3">
-    <img src="C:\Users\dylan\Desktop\webbsite\images\image 4.jpg" alt="Photo 4">
+    <img src="images\image 1.jpg" alt="Photo 1">
+    <img src="images\image 2.jpg" alt="Photo 2">
+    <img src="images\image 3.jpg" alt="Photo 3">
+    <img src="images\image 4.jpg" alt="Photo 4">
     <!-- Add more images here -->
   </div>
 
@@ -115,3 +115,4 @@
   </script>
 </body>
 </html>
+
