--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>atlas dylan</title>
-  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -15,11 +14,14 @@
       text-align: center;
     }
 
-    h1 {
-      font-weight: 700;
-      font-size: 3rem;
+    header {
+      text-align: center;
       margin: 20px 0;
-      color: #000;
+    }
+
+    header .logo {
+      max-width: 400px; 
+      height: auto;
     }
 
     .gallery {
@@ -76,14 +78,15 @@
   </style>
 </head>
 <body>
-  <h1>atlas dylan</h1>
+  <header>
+    <img src="images/logo.png" alt="atlas dylan logo" class="logo">
+  </header>
 
   <div class="gallery">
     <img src="images/image1.jpg" alt="Photo 1">
     <img src="images/image2.jpg" alt="Photo 2">
     <img src="images/image3.jpg" alt="Photo 3">
     <img src="images/image4.jpg" alt="Photo 4">
-    <!-- Add more images in images/ folder -->
   </div>
 
   <div class="lightbox" id="lightbox">
