--- a/index.html
+++ b/index.html
@@ -93,9 +93,15 @@
     <img src="images/image2.jpg" alt="Photo 2">
     <img src="images/image3.jpg" alt="Photo 3">
     <img src="images/image4.jpg" alt="Photo 4">
+    <img src="images/image5.jpg" alt="Photo 4">
   </div>
 
-  
+  <div class="video-section">
+    <video controls>
+      <source src="videos/video1.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
 
   <div class="lightbox" id="lightbox">
     <img src="" alt="Enlarged image">
