--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <div class="video-section">
     <video controls>
-      <source src="videos/video1.mp4" type="video/mp4">
+      <source src="images/video2.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -126,4 +126,5 @@
   </script>
 </body>
 </html>
+
 
