--- a/index.html
+++ b/index.html
@@ -90,9 +90,6 @@
 
   <div class="gallery">
     <img src="images/image1.jpg" alt="Photo 1">
-    <img src="images/image2.jpg" alt="Photo 2">
-    <img src="images/image3.jpg" alt="Photo 3">
-    <img src="images/image4.jpg" alt="Photo 4">
     <img src="images/image5.jpg" alt="Photo 4">
   </div>
 
@@ -102,6 +99,14 @@
       Your browser does not support the video tag.
     </video>
   </div>
+  
+  <div class="gallery">  
+    <img src="images/image2.jpg" alt="Photo 2">
+    <img src="images/image3.jpg" alt="Photo 3">
+    <img src="images/image4.jpg" alt="Photo 4">
+  </div>
+
+
 
   <div class="lightbox" id="lightbox">
     <img src="" alt="Enlarged image">
@@ -126,5 +131,6 @@
   </script>
 </body>
 </html>
+
 
 
