--- a/index.html
+++ b/index.html
@@ -26,14 +26,17 @@
       padding: 0 10px;
     }
 
-    .gallery img {
-      width: 90%;
-      max-width: 800px;
-      margin: 15px 0;
-      object-fit: cover;
-      transition: transform 0.3s;
-      cursor: pointer;
-      border-radius: 5px;
+   .gallery img {
+  width: 90%;
+  max-width: 800px;
+  margin: 15px 0;
+  object-fit: contain;     
+  background-color: #fff;   
+  transition: transform 0.3s;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
     }
 
     .gallery img:hover {
@@ -148,3 +151,4 @@
   </script>
 </body>
 </html>
+
