--- a/index.html
+++ b/index.html
@@ -26,17 +26,15 @@
       padding: 0 10px;
     }
 
-   .gallery img {
-  width: 90%;
-  max-width: 800px;
-  margin: 15px 0;
-  object-fit: contain;     
-  background-color: #fff;   
-  transition: transform 0.3s;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
+    .gallery img {
+      width: 90%;
+      max-width: 800px;
+      margin: 15px 0;
+      object-fit: contain;
+      background-color: #fff;
+      transition: transform 0.3s;
+      cursor: pointer;
+      border-radius: 5px;
     }
 
     .gallery img:hover {
@@ -63,6 +61,8 @@
       max-width: 90%;
       max-height: 90%;
       border-radius: 5px;
+      object-fit: contain;
+      background-color: #000;
     }
 
     .lightbox.show {
@@ -83,6 +83,30 @@
       max-width: 800px;
       border-radius: 5px;
       outline: none;
+      object-fit: contain;
+      background-color: #fff;
+    }
+
+    /* Play Button Overlay */
+    .video-wrapper {
+      position: relative;
+      display: inline-block;
+    }
+
+    .video-wrapper::after {
+      content: '▶';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 80px;
+      color: rgba(255,255,255,0.8);
+      pointer-events: none;
+      transition: opacity 0.2s;
+    }
+
+    .video-wrapper.playing::after {
+      opacity: 0;
     }
   </style>
 </head>
@@ -97,15 +121,29 @@
   </div>
 
   <div class="video-section">
-    <video id="video" controls>
-      <source src="images/video2.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+    <div class="video-wrapper">
+      <video id="video" controls>
+        <source src="images/video2.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
   </div>
   
   <div class="gallery">  
     <img src="images/image2.jpg" alt="Photo 2">
     <img src="images/image3.jpg" alt="Photo 3">
+    </div>
+
+  <div class="video-section">
+    <div class="video-wrapper">
+      <video id="video" controls>
+        <source src="images/video1.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+  </div>
+  
+  <div class="gallery">   
     <img src="images/image4.jpg" alt="Photo 4">
   </div>
 
@@ -132,6 +170,8 @@
 
     // --- Generate video thumbnail from first second ---
     const video = document.getElementById('video');
+    const videoWrapper = document.querySelector('.video-wrapper');
+
     video.addEventListener('loadeddata', () => {
       video.currentTime = Math.min(1, video.duration / 2);
     });
@@ -148,7 +188,19 @@
 
       video.currentTime = 0;
     });
+
+    // --- Play Button Logic ---
+    video.addEventListener('play', () => {
+      videoWrapper.classList.add('playing');
+    });
+
+    video.addEventListener('pause', () => {
+      videoWrapper.classList.remove('playing');
+    });
+
+    video.addEventListener('ended', () => {
+      videoWrapper.classList.remove('playing');
+    });
   </script>
 </body>
 </html>
-
