--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
   </style>
 </head>
 <body>
+
   <header>
     <img src="images/logo.png" alt="atlas dylan">
   </header>
@@ -127,12 +128,12 @@
       </video>
     </div>
   </div>
-  
+
   <div class="gallery">  
     <img src="images/image2.jpg" alt="Photo 2">
     <img src="images/image3.jpg" alt="Photo 3">
-    </div>
- 
+  </div>
+
   <div class="gallery">   
     <img src="images/image4.jpg" alt="Photo 4">
   </div>
@@ -142,6 +143,7 @@
   </div>
 
   <script>
+    // --- Lightbox ---
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = lightbox.querySelector('img');
     const galleryImages = document.querySelectorAll('.gallery img');
@@ -158,30 +160,44 @@
       lightboxImg.src = '';
     });
 
-    // --- Generate video thumbnail from first second ---
+    // --- Video thumbnail generation (fixed) ---
     const video = document.getElementById('video');
     const videoWrapper = document.querySelector('.video-wrapper');
 
+    let posterGenerated = false;
+
     video.addEventListener('loadeddata', () => {
-      video.currentTime = Math.min(1, video.duration / 2);
+      if (posterGenerated) return;
+      posterGenerated = true;
+
+      const captureTime = Math.min(1, video.duration / 2);
+      video.currentTime = captureTime;
     });
 
-    video.addEventListener('seeked', () => {
+    video.addEventListener('seeked', function handleSeek() {
       const canvas = document.createElement('canvas');
       canvas.width = video.videoWidth;
       canvas.height = video.videoHeight;
+
       const ctx = canvas.getContext('2d');
       ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-      const thumbnail = canvas.toDataURL('image/png');
-      video.setAttribute('poster', thumbnail);
+      video.poster = canvas.toDataURL('image/png');
 
+      // Remove listener so playback is never interrupted
+      video.removeEventListener('seeked', handleSeek);
       video.currentTime = 0;
     });
 
+    // --- Play overlay behaviour ---
+    video.addEventListener('play', () => {
+      videoWrapper.classList.add('playing');
+    });
 
+    video.addEventListener('pause', () => {
+      videoWrapper.classList.remove('playing');
+    });
   </script>
+
 </body>
 </html>
-
-
